--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -222,3 +222,36 @@ footer nav ul {
 	margin: 2em
 }
 
+.modal {
+	/* display: none;  */
+	position: fixed; 
+	padding-top: 500px; 
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%; 
+	overflow: auto; 
+	background-color: rgb(0,0,0); 
+	background-color: rgba(0,0,0,0.4);
+  }
+
+.contain-modal {
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 630px;
+  }
+
+.close {
+	color: #aaaaaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+  }
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
