creation de la fonction works

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -299,7 +299,9 @@ footer nav ul {
 	text-decoration: none;
 	cursor: pointer;
   }
-
+#newImg {
+	width: 100px;
+}
 #close {
 	color: #aaaaaa;
 	float: right;
